--- a/index.html
+++ b/index.html
@@ -6,47 +6,47 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
+    <div class="elsenhover-matrix-description">
       <img src="./eisenhower-matrix.jpg">
-      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <a class="information-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="top-section-for-adding-element-to-list">
+    <div class="main-page-section">
+      <p id="add-item-block">
         <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
+        <div class="new-task-wrapper">
+          <input id="new-task"class="task-input" type="text">
           <button>Add</button>
         </div>
       </p>
       <h3>Todo</h3>
-      <ul id="incomplete-tasks">
+      <ul id="incomplete-tasks-block">
         <li>
           <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
+          <label class="task-label">Pay Bills</label>
+          <input type="text" class="task-input">
+          <button class="edit-button">Edit</button>
+          <button class="delete-button">
             <img src="./remove.svg">
           </button>
         </li>
-        <li class="edit-mode">
+        <li class="currently-edited-task">
           <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class='edit'>Save</button>
-          <button class="delete">
+          <label class="task-label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task-input">
+          <button class="edit-button">Save</button>
+          <button class="delete-button">
             <img src="./remove.svg">
           </button>
         </li>
       </ul>
       <h3>Completed</h3>
-      <ul id="completed-tasks">
+      <ul id="completed-tasks-block">
         <li>
           <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
+          <label class="task-label">See the Doctor</label>
+          <input type="text" class="task-input">
+          <button class="edit-button">Edit</button>
+          <button class="delete-button">
             <img src="./remove.svg">
           </button>
         </li>
