--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="elsenhover-matrix-description">
+    <div class="matrix-description">
       <img src="./eisenhower-matrix.jpg">
-      <a class="information-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <a class="info-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="main-page-section">
+    <div class="main-section">
       <p id="add-item-block">
         <label for="new-task">Add Item</label>
         <div class="new-task-wrapper">
@@ -19,7 +19,7 @@
         </div>
       </p>
       <h3>Todo</h3>
-      <ul id="incomplete-tasks-block">
+      <ul id="to-do-block">
         <li>
           <input type="checkbox">
           <label class="task-label">Pay Bills</label>
@@ -40,7 +40,7 @@
         </li>
       </ul>
       <h3>Completed</h3>
-      <ul id="completed-tasks-block">
+      <ul id="completed-block">
         <li>
           <input type="checkbox" checked>
           <label class="task-label">See the Doctor</label>
