--- a/index.html
+++ b/index.html
@@ -5,49 +5,49 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="body">
     <div class="matrix-description">
-      <img src="./eisenhower-matrix.jpg">
+      <img class="matrix-img" src="./eisenhower-matrix.jpg">
       <a class="info-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="main-section">
       <p id="add-item-block">
-        <label for="new-task">Add Item</label>
+        <label class="new-task-label" for="new-task">Add Item</label>
         <div class="new-task-wrapper">
-          <input id="new-task"class="task-input" type="text">
-          <button>Add</button>
+          <input class="task-input new-task" id="new-task" type="text">
+          <button class="btn">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
-      <ul id="to-do-block">
-        <li>
-          <input type="checkbox">
-          <label class="task-label">Pay Bills</label>
-          <input type="text" class="task-input">
-          <button class="edit-button">Edit</button>
-          <button class="delete-button">
-            <img src="./remove.svg">
+      <h3 class="block-h3">Todo</h3>
+      <ul class="ul-block" id="to-do-block">
+        <li class="ul-block-list-item">
+          <input class="list-element input-checkbox" type="checkbox">
+          <label class="list-element task-label">Pay Bills</label>
+          <input class="list-element task-input" type="text">
+          <button class="list-element btn edit-button">Edit</button>
+          <button class="list-element btn delete-button">
+            <img class="delete-btn-img" src="./remove.svg">
           </button>
         </li>
-        <li class="currently-edited-task">
-          <input type="checkbox">
-          <label class="task-label">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task-input">
-          <button class="edit-button">Save</button>
-          <button class="delete-button">
-            <img src="./remove.svg">
+        <li class="ul-block-list-item currently-edited-task">
+          <input class="list-element input-checkbox" type="checkbox">
+          <label class="list-element task-label">Go Shopping</label>
+          <input class="list-element task-input" type="text" value="Go Shopping">
+          <button class="list-element btn edit-button">Save</button>
+          <button class="list-element btn delete-button">
+            <img class="delete-btn-img" src="./remove.svg">
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-block">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task-label">See the Doctor</label>
-          <input type="text" class="task-input">
-          <button class="edit-button">Edit</button>
-          <button class="delete-button">
-            <img src="./remove.svg">
+      <h3 class="block-h3">Completed</h3>
+      <ul class="ul-block completed-block" id="completed-block">
+        <li class="ul-block-list-item">
+          <input class="list-element input-checkbox" type="checkbox" checked>
+          <label class="list-element task-label">See the Doctor</label>
+          <input class="list-element task-input" type="text">
+          <button class="list-element btn edit-button">Edit</button>
+          <button class="list-element btn delete-button">
+            <img class="delete-btn-img" src="./remove.svg">
           </button>
         </li>
       </ul>
