--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="body">
-    <div class="matrix-description">
+    <header class="matrix-description">
       <img class="matrix-img" src="./eisenhower-matrix.jpg">
       <a class="info-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="main-section">
-      <p id="add-item-block">
+    </header>
+    <main class="main-section">
+      <div class="add-item-block">
         <label class="new-task-label" for="new-task">Add Item</label>
         <div class="new-task-wrapper">
           <input class="task-input new-task" id="new-task" type="text">
           <button class="btn">Add</button>
         </div>
-      </p>
+      </div>
       <h3 class="block-h3">Todo</h3>
       <ul class="ul-block" id="to-do-block">
         <li class="ul-block-list-item">
@@ -51,7 +51,7 @@
           </button>
         </li>
       </ul>
-    </div>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
