--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="body">
     <header class="matrix-description">
-      <img class="matrix-img" src="./eisenhower-matrix.jpg">
+      <img class="matrix-img" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix scheme">
       <a class="info-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main-section">
@@ -26,7 +26,7 @@
           <input class="list-element task-input" type="text">
           <button class="list-element btn edit-button">Edit</button>
           <button class="list-element btn delete-button">
-            <img class="delete-btn-img" src="./remove.svg">
+            <img class="delete-btn-img" src="./remove.svg" alt="delete button image">
           </button>
         </li>
         <li class="ul-block-list-item currently-edited-task">
@@ -35,7 +35,7 @@
           <input class="list-element task-input" type="text" value="Go Shopping">
           <button class="list-element btn edit-button">Save</button>
           <button class="list-element btn delete-button">
-            <img class="delete-btn-img" src="./remove.svg">
+            <img class="delete-btn-img" src="./remove.svg" alt="delete button image>
           </button>
         </li>
       </ul>
@@ -47,7 +47,7 @@
           <input class="list-element task-input" type="text">
           <button class="list-element btn edit-button">Edit</button>
           <button class="list-element btn delete-button">
-            <img class="delete-btn-img" src="./remove.svg">
+            <img class="delete-btn-img" src="./remove.svg" alt="delete button image">
           </button>
         </li>
       </ul>
