refactor: add BEM class names according to rule 2.1 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -7,47 +7,47 @@
   </head>
   <body class="body">
     <header class="matrix-description">
-      <img class="matrix-img" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix scheme">
-      <a class="info-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <img class="matrix-description__img" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix scheme">
+      <a class="matrix-description__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main-section">
-      <div class="add-item-block">
-        <label class="new-task-label" for="new-task">Add Item</label>
-        <div class="new-task-wrapper">
-          <input class="task-input new-task" id="new-task" type="text">
-          <button class="btn">Add</button>
+      <div class="input-set input-set_add-task">
+        <label class="set-title set-title_add-item" for="new-task">Add Item</label>
+        <div class="input-set__wrapper">
+          <input class="input-set__new-task task-input" id="new-task" type="text">
+          <button class="input-set__btn-add btn">Add</button>
         </div>
       </div>
-      <h3 class="block-h3">Todo</h3>
-      <ul class="ul-block" id="to-do-block">
-        <li class="ul-block-list-item">
-          <input class="list-element input-checkbox" type="checkbox">
-          <label class="list-element task-label">Pay Bills</label>
-          <input class="list-element task-input" type="text">
-          <button class="list-element btn edit-button">Edit</button>
-          <button class="list-element btn delete-button">
-            <img class="delete-btn-img" src="./remove.svg" alt="delete button image">
+      <h3 class="set-title">Todo</h3>
+      <ul class="input-set" id="to-do-block">
+        <li class="input-set__list list-item">
+          <input class="list-item__element input-set__input-checkbox" type="checkbox">
+          <label class="list-item__element input-set__task-label">Pay Bills</label>
+          <input class="list-item__element task-input" type="text">
+          <button class="list-item__element input-set__edit-button btn">Edit</button>
+          <button class="list-item__element input-set__delete-button btn">
+            <img class="input-set__delete-btn-img" src="./remove.svg" alt="delete button image">
           </button>
         </li>
-        <li class="ul-block-list-item currently-edited-task">
-          <input class="list-element input-checkbox" type="checkbox">
-          <label class="list-element task-label">Go Shopping</label>
-          <input class="list-element task-input" type="text" value="Go Shopping">
-          <button class="list-element btn edit-button">Save</button>
-          <button class="list-element btn delete-button">
-            <img class="delete-btn-img" src="./remove.svg" alt="delete button image>
+        <li class="input-set__list_edited list-item">
+          <input class="list-item__element input-set__input-checkbox" type="checkbox">
+          <label class="list-item__element input-set__task-label">Go Shopping</label>
+          <input class="list-item__element task-input" type="text" value="Go Shopping">
+          <button class="list-item__element input-set__edit-button btn">Save</button>
+          <button class="list-item__element input-set__delete-button btn">
+            <img class="input-set__delete-btn-img" src="./remove.svg" alt="delete button image">
           </button>
         </li>
       </ul>
-      <h3 class="block-h3">Completed</h3>
-      <ul class="ul-block completed-block" id="completed-block">
-        <li class="ul-block-list-item">
-          <input class="list-element input-checkbox" type="checkbox" checked>
-          <label class="list-element task-label">See the Doctor</label>
-          <input class="list-element task-input" type="text">
-          <button class="list-element btn edit-button">Edit</button>
-          <button class="list-element btn delete-button">
-            <img class="delete-btn-img" src="./remove.svg" alt="delete button image">
+      <h3 class="set-title">Completed</h3>
+      <ul class="input-set input-set_completed" id="completed-block">
+        <li class="input-set__list list-item">
+          <input class="list-item__element input-set__input-checkbox" type="checkbox" checked>
+          <label class="list-item__element input-set__task-label">See the Doctor</label>
+          <input class="list-item__element task-input" type="text">
+          <button class="list-item__element input-set__edit-button btn">Edit</button>
+          <button class="list-item__element input-set__delete-button btn">
+            <img class="input-set__delete-btn-img" src="./remove.svg" alt="delete button image">
           </button>
         </li>
       </ul>
