refactor: apply semantics according to rule 1.1 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <main class="main-section">
       <div class="input-set input-set_add-task">
-        <label class="set-title set-title_add-item" for="new-task">Add Item</label>
+        <h3 class="set-title set-title_add-item">Add Item</h3>
         <div class="input-set__wrapper">
           <input class="input-set__new-task task-input" id="new-task" type="text">
           <button class="input-set__btn-add btn">Add</button>
